# System_Integration

./: .gitignore  EKSAM.md
00._Course_Material/01._Assignments/10b._migrate_from_one_Database_to_another/_python/: docs.md  pyproject.toml
00._Course_Material/01._Assignments/10b._migrate_from_one_Database_to_another/_python/alembic/versions/: dc353164f5fb_create_users_and_products_tables.py
00._Course_Material/01._Assignments/10b._migrate_from_one_Database_to_another/_python/script_to_migrate_data/: README.md
00._Course_Material/01._Assignments/10b._migrate_from_one_Database_to_another/_python/script_to_migrate_data/src/: index.py  migrate_data.py
08._Server-Server/01._node/: app.js  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
08._Server-Server/03._node/: app.js  package-lock.json  package.json
08._Server-Server/04._python/: main.py  pyproject.toml
09._Enviroment_variabel/02._python/: .env.template  main.py  pyproject.toml
10._Date/01._node/: index.js
18,._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Aduio/: index.html
22._MPEG-DASH/: app.js
23._Embeddedyoutube/: embeddedyoutube.html
27._Web_Scraping_web_crawling/: main.py  pyproject.toml
27._Web_Scraping_web_crawling/04._python_scarpy_basic/: pyproject.toml
27._Web_Scraping_web_crawling/04._python_scarpy_basic/wikicawler/: output.json  scrapy.cfg
27._Web_Scraping_web_crawling/04._python_scarpy_basic/wikicawler/wikicawler/: items.py  middlewares.py  pipelines.py  settings.py
27._Web_Scraping_web_crawling/04._python_scarpy_basic/wikicawler/wikicawler/spiders/: wikiPageSpider.py
Notes/: 04.Lecture.md  06.Lecture.md  10._lecture.md  11._lec.md  EKSAM.md  GraphQL.md  Scriping.md  poetry_vs_venv.md  webhook.md
(+182 files in other folders)
