[project]
name = "04-python-scarpy-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Rasho-dk",email = "sheroshvan@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "04"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
